Builder.setSourceDateEpoch for in-process callers